[tool.poetry]
name = "textual-experiments"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.1.12"
textual-inputs = "^0.1.2"
fast-autocomplete = {extras = ["levenshtein"], version = "^0.9.0"}
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pre-commit = "^2.15.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
